<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_bottom_nav_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_services"
        android:icon="@drawable/ic_services_bottom_nav_24dp"
        android:title="@string/title_services" />

    <item
        android:id="@+id/navigation_jobs"
        android:icon="@drawable/ic_jobs_bottom_nav_24dp"
        android:title="@string/title_jobs" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_messages_bottom_nav_24dp"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_bottom_nav_24dp"
        android:title="@string/title_profile" />

</menu>
