<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="6dp">

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_company_hint"
        android:layout_marginRight="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/location"
            android:layout_weight="1"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/category"
            android:layout_weight="1"/>

    </LinearLayout>




        <ListView
            android:id="@+id/allCompanyList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="1dp"
            android:layout_marginTop="5dp"
            android:listSelector="@color/dot_light_screen2"
            />


</LinearLayout>